FIX de PMD y Checkstyle