@@ -1,5 +1,7 @@
 package com.app.challenge.shared.exception;
 
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.HttpMediaTypeNotSupportedException;
@@ -8,28 +10,24 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Slf4j
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
     @ExceptionHandler(EmailAlreadyExistsException.class)
     public ResponseEntity<ErrorResponse> handleEmailExists(EmailAlreadyExistsException ex) {
+        log.error("Error handleEmailExists ", ex);
         return ResponseEntity.status(HttpStatus.BAD_REQUEST)
             .body(new ErrorResponse("El correo ya registrado"));
     }
 
     @ExceptionHandler(HttpMediaTypeNotSupportedException.class)
     public ResponseEntity<ErrorResponse> handleUnsupportedMediaType(HttpMediaTypeNotSupportedException ex) {
+        log.error("Error handleUnsupportedMediaType ", ex);
         return ResponseEntity
             .status(HttpStatus.UNSUPPORTED_MEDIA_TYPE)
             .body(new ErrorResponse("Tipo de contenido no soportado. Se esperaba 'application/json'"));
-    }
-
-    @ExceptionHandler(CustomValidationException.class)
-    public ResponseEntity<ErrorResponse> handleCustomValidation(CustomValidationException ex) {
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-            .body(new ErrorResponse(ex.getMessage()));
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
@@ -37,8 +35,8 @@ public class GlobalExceptionHandler {
         List<String> errors = ex.getBindingResult()
             .getFieldErrors()
             .stream()
-            .map(error -> error.getDefaultMessage())
-            .collect(Collectors.toList());
+            .map(DefaultMessageSourceResolvable::getDefaultMessage)
+            .toList();
 
         String mensaje = String.join(" - ", errors);
         return ResponseEntity.status(HttpStatus.BAD_REQUEST)
@@ -47,7 +45,7 @@ public class GlobalExceptionHandler {
 
     @ExceptionHandler(Exception.class)
     public ResponseEntity<ErrorResponse> handleGeneric(Exception ex) {
-        ex.printStackTrace();
+        log.error("Error handleUnsupportedMediaType ", ex);
         return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
             .body(new ErrorResponse("Error interno del servidor"));
     }
